# docs/swagger.json
@@ -406,6 +406,15 @@
                         "name": "token",
                         "in": "header",
                         "required": true
+                    },
+                    {
+                        "description": "新建组织",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/model.Organization"
+                        }
                     }
                 ],
                 "responses": {
@@ -589,7 +598,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.User"
+                            "$ref": "#/definitions/model.Info"
                         }
                     }
                 ],
@@ -652,48 +661,6 @@
                         "schema": {
                             "$ref": "#/definitions/errno.Errno"
                         }
-                    }
-                }
-            }
-        },
-        "/user/profile": {
-            "post": {
-                "description": "修改用户头像",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "修改头像",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token",
-                        "name": "token",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "file",
-                        "description": "文件",
-                        "name": "file",
-                        "in": "formData",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "数据无法更新",
-                        "schema": {
-                            "$ref": "#/definitions/errno.Errno"
-                        }
-                    },
-                    "404": {
-                        "description": "该用户不存在"
                     }
                 }
             }
@@ -881,6 +848,29 @@
                 }
             }
         },
+        "model.Info": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "deletedAt": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "nickname": {
+                    "type": "string"
+                },
+                "studentID": {
+                    "type": "string"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Organization": {
             "type": "object",
             "required": [
@@ -888,7 +878,7 @@
             ],
             "properties": {
                 "avatar": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "createdAt": {
                     "type": "string"
@@ -908,6 +898,12 @@
                 "organization_name": {
                     "type": "string"
                 },
+                "path": {
+                    "type": "string"
+                },
+                "sha": {
+                    "type": "string"
+                },
                 "updatedAt": {
                     "type": "string"
                 }
@@ -921,7 +917,7 @@
             ],
             "properties": {
                 "avatar": {
-                    "$ref": "#/definitions/sql.NullString"
+                    "type": "string"
                 },
                 "createdAt": {
                     "type": "string"
@@ -938,23 +934,17 @@
                 "password": {
                     "type": "string"
                 },
+                "path": {
+                    "type": "string"
+                },
+                "sha": {
+                    "type": "string"
+                },
                 "student_id": {
                     "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
-                }
-            }
-        },
-        "sql.NullString": {
-            "type": "object",
-            "properties": {
-                "string": {
-                    "type": "string"
-                },
-                "valid": {
-                    "description": "Valid is true if String is not NULL",
-                    "type": "boolean"
                 }
             }
         }
