# handler/organization/organization.go
@@ -4,16 +4,12 @@ import (
 	"blackboard/handler"
 	"blackboard/model"
 	"blackboard/pkg/errno"
-	"database/sql"
-	"fmt"
-	"log"
+	"blackboard/services"
+	"blackboard/services/connector"
 	"net/http"
 	"os"
-	"path/filepath"
-	"strconv"
-	"time"
+	"path"
 
-	"github.com/Wishforpeace/My-Tool/utils"
 	"github.com/gin-gonic/gin"
 )
 
@@ -87,7 +83,7 @@ func CheckFollowing(c *gin.Context) {
 // @Failure 500 {object} errno.Errno "{"error_code":"30001", "message":"Fail."} 失败"
 // @Router /organization/details [get]
 type Detail struct {
-	Name string `json:"name"`
+	Name string `json:"name" binding:"required"`
 	ID   string `json:"id"`
 }
 
@@ -119,6 +115,7 @@ func CheckDetails(c *gin.Context) {
 // @Accept application/json
 // @Produce application/json
 // @Param token header string true "token"
+// @Param object body model.Organization true "新建组织"
 // @Success 200 {object} []model.Organization "{"msg":"新建成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001","message":"Fail."}or {"error_code":"00002","message":"Lack Param or Param Not Satisfiable."}"
 // @Router /organization/create [post]
@@ -136,41 +133,91 @@ func CreateOne(c *gin.Context) {
 		c.JSON(http.StatusBadRequest, "Fail.")
 	}
 	handler.SendResponse(c, "创建成功", nil)
-	file, e := c.FormFile("avatar_file")
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("文件上传错误", e.Error())
+}
+
+// @Summary 修改头像
+// @Tags user
+// @Description 修改组织头像
+// @Accept application/json
+// @Produce application/json
+// @Param token header string true "token"
+// @Param file formData file true "文件"
+// @Param organization_name path string true
+// @Success 200 {object} model.User "{"mgs":"success"}"
+// @Failure 200 {object} errno.Errno "绑定发生错误"
+// @Failure 200 {object} errno.Errno "文件上传错误"
+// @Failure 200 {object} errno.Errno "无法创建文件夹"
+// @Failure 200 {object} errno.Errno "无法保存文件"
+// @Failure 200 {object} errno.Errno "数据无法更新"
+// @Failure 404 "该用户不存在"
+// @Router /:organization_name/image [post]
+type Avatar struct {
+	Url  string
+	Sha  string
+	Path string
+}
+
+func UploadImage(c *gin.Context) {
+	ID := c.MustGet("student_id").(string)
+	name := c.Param("organization_name")
+	if name == "" {
+		handler.SendBadRequest(c, "Lack Param Or Param Not Satisfiable.", nil)
+		return
 	}
-	path := utils.RootPath()
-	path = filepath.Join(path, "avatar")
-	fmt.Println("path =>", path)
-	e = os.MkdirAll(path, os.ModePerm)
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("无法创建文件", e.Error())
+	orgID := model.GetOrgID(name)
+	verify := model.JudgeFounder(ID, orgID)
+	if !verify {
+		handler.SendBadRequest(c, "不具有资格", nil)
+		return
 	}
-	fileName := strconv.FormatInt(time.Now().Unix(), 10) + file.Filename
-	e = c.SaveUploadedFile(file, filepath.Join(path, fileName))
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("无法保存文件", e.Error())
+	file, err := c.FormFile("file")
+	if err != nil {
+		handler.SendBadRequest(c, "上传失败", nil)
+		return
 	}
-	avatarUrl := "/avatar/" + fileName
-	org.Avatar = sql.NullString{String: avatarUrl}
-	e = org.UpdateOrganization(org.ID)
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("数据无法更新", e.Error())
+	filepath := "./"
+	if _, err := os.Stat(filepath); err != nil {
+		if !os.IsExist(err) {
+			os.MkdirAll(filepath, os.ModePerm)
+		}
 	}
-	c.Redirect(http.StatusMovedPermanently, "/organization/details"+org.OrganizationName)
+
+	fileExt := path.Ext(filepath + file.Filename)
+
+	file.Filename = name + fileExt
+
+	filename := filepath + file.Filename
+
+	if err := c.SaveUploadedFile(file, filename); err != nil {
+		handler.SendBadRequest(c, "上传失败", nil)
+		return
+	}
+
+	// 删除组织原头像
+
+	organization, _ := model.GetDetails("", name)
+	if organization.Path != "" && organization.Sha != "" {
+		connector.RepoCreate().Del(organization.Path, organization.Sha)
+	}
+
+	// 上传新头像
+	Base64 := services.ImagesToBase64(filename)
+	organization.Avatar, organization.Path, organization.Sha = connector.RepoCreate().Push(file.Filename, Base64)
+
+	os.Remove(filename)
+
+	e := model.UpdateOrganization(organization)
+	if organization.Avatar == "" || e != nil {
+		handler.SendBadRequest(c, "上传失败,请检查token与其他配置参数是否正确", e)
+		return
+	}
+
+	handler.SendResponse(c, "上传成功", map[string]interface{}{
+		"url":  organization.Avatar,
+		"sha":  organization.Sha,
+		"path": organization.Path,
+		"Id":   orgID,
+	})
 }
 
 // @Summary  关注组织
