# handler/user/user.go
@@ -3,18 +3,14 @@ package user
 import (
 	"blackboard/handler"
 	"blackboard/model"
-	"database/sql"
-
-	// "encoding/base64"
-	"fmt"
-	"log"
+	"blackboard/services"
+	"blackboard/services/connector"
 	"net/http"
 	"os"
-	"path/filepath"
-	"strconv"
-	"time"
+	"path"
 
-	"github.com/Wishforpeace/My-Tool/utils"
+	// "time"
+
 	"github.com/gin-gonic/gin"
 	// "github.com/jinzhu/gorm"
 )
@@ -46,7 +42,6 @@ func UserInfo(c *gin.Context) {
 			Model:     u.Model,
 			StudentID: u.StudentID,
 			NickName:  u.NickName,
-			Avatar:    u.Avatar,
 		}
 		handler.SendResponse(c, "获取成功", Info)
 
@@ -59,7 +54,7 @@ func UserInfo(c *gin.Context) {
 // @Accept application/json
 // @Produce application/json
 // @Param token header string true "token"
-// @Param User body model.User true "需要修改的用户信息"
+// @Param User body model.Info true "需要修改的用户信息"
 // @Success 200 {object} handler.Response "{"msg":"修改成功"}"
 // @Failure 400 {object} errno.Errno "{"error_code":"20001", "message":"Fail."} or {"error_code":"00002", "message":"Lack Param Or Param Not Satisfiable."}"
 // @Failure 500 {object} errno.Errno "{"error_code":"30001", "message":"Fail."} 失败"
@@ -143,47 +138,59 @@ func UserPublished(c *gin.Context) {
 // @Failure 200 {object} errno.Errno "数据无法更新"
 // @Failure 404 "该用户不存在"
 // @Router /user/profile [post]
+type Avatar struct {
+	Url  string
+	Sha  string
+	Path string
+}
+
 func UpdateUserProfile(c *gin.Context) {
-	var user model.User
-	if err := c.ShouldBind(&user); err != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": err.Error(),
-		})
-		log.Panicln("绑定发生错误 ", err.Error())
+	ID := c.MustGet("student_id").(string)
+	file, err := c.FormFile("file")
+	if err != nil {
+		handler.SendBadRequest(c, "上传失败", nil)
+		return
 	}
-	file, e := c.FormFile("avatar-file")
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("文件上传错误", e.Error())
+	filepath := "./"
+	if _, err := os.Stat(filepath); err != nil {
+		if !os.IsExist(err) {
+			os.MkdirAll(filepath, os.ModePerm)
+		}
 	}
-	path := utils.RootPath()
-	path = filepath.Join(path, "avatar")
-	fmt.Println("path =>", path)
-	e = os.MkdirAll(path, os.ModePerm)
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("无法创建文件夹", e.Error())
+
+	fileExt := path.Ext(filepath + file.Filename)
+
+	file.Filename = ID + fileExt
+
+	filename := filepath + file.Filename
+
+	if err := c.SaveUploadedFile(file, filename); err != nil {
+		handler.SendBadRequest(c, "上传失败", nil)
+		return
 	}
-	fileName := strconv.FormatInt(time.Now().Unix(), 10) + file.Filename
-	e = c.SaveUploadedFile(file, filepath.Join(path, fileName))
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("无法保存文件", e.Error())
+
+	// 删除原头像
+	user, _ := model.GetUserInfo(ID)
+	if user.Path != "" && user.Sha != "" {
+		connector.RepoCreate().Del(user.Path, user.Sha)
 	}
-	avatarUrl := "/avatar/" + fileName
-	user.Avatar = sql.NullString{String: avatarUrl}
-	e = user.UpdateUser(user.StudentID)
-	if e != nil {
-		c.HTML(http.StatusOK, "error.tmpl", gin.H{
-			"error": e,
-		})
-		log.Panicln("数据无法更新", e.Error())
+
+	// 上传新头像
+	Base64 := services.ImagesToBase64(filename)
+	picUrl, picPath, picSha := connector.RepoCreate().Push(file.Filename, Base64)
+
+	os.Remove(filename)
+
+	e := model.UpdateUser(ID, picUrl, picSha, picPath)
+	if picUrl == "" || e != nil {
+		handler.SendBadRequest(c, "上传失败,请检查token与其他配置参数是否正确", nil)
+		return
 	}
-	c.Redirect(http.StatusMovedPermanently, "/user/profile?id="+user.StudentID)
+
+	handler.SendResponse(c, "上传成功", map[string]interface{}{
+		"url":  picUrl,
+		"sha":  picSha,
+		"path": picPath,
+	})
+
 }
